[tool.poetry]
name = "isortd"
version = "0.1.0"
description = ""
authors = ["mm <megafukz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
isort = "^5.6.4"
aiohttp = "^3.7.0"
click = "^7.1.2"
aiohttp_cors = "^0.7.0"
aiohttp-cors = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.isort]
profile = "black"
line_length = 120


[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
