[tool.poetry]
name = "isortd"
version = "0.1.4"
description = "isort daemon. Http api to isort"
authors = ["mm <megafukz@gmail.com>"]
homepage = "https://github.com/urm8/isortd"
license = "WTFPL"
readme = "README.md"
repository = "https://github.com/urm8/isortd"
keywords = ["import", "sort"]
classifiers = [
    "Environment :: Console",
    "Framework :: Flake8",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
isort = "^5.6.4"
aiohttp = "^3.7.0"
click = "^7.1.2"
aiohttp_cors = "^0.7.0"
aiohttp-cors = "^0.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[tool.isort]
profile = "black"
line_length = 120
known_third_party="aiohttp,click,isort"
known_first_party="isortd"


[tool.black]
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
